third_party/move/move-compiler-v2/tests/checking/typing/return_type_explicit_exp_invalid.exp

Diagnostics:
error: cannot return nothing from a function with result type `u64`
  ┌─ tests/checking/typing/return_type_explicit_exp_invalid.move:5:16
  │
5 │         return ()
  │                ^^

error: cannot return `integer` from a function which returns nothing
  ┌─ tests/checking/typing/return_type_explicit_exp_invalid.move:9:26
  │
9 │         if (true) return 1 else return 0
  │                          ^

error: cannot return `integer` from a function which returns nothing
  ┌─ tests/checking/typing/return_type_explicit_exp_invalid.move:9:40
  │
9 │         if (true) return 1 else return 0
  │                                        ^

error: the function returns 2 arguments but 3 were provided
   ┌─ tests/checking/typing/return_type_explicit_exp_invalid.move:13:21
   │
13 │         loop return (0, false, R{});
   │                     ^^^^^^^^^^^^^^^

error: the function returns 4 arguments but 3 were provided
   ┌─ tests/checking/typing/return_type_explicit_exp_invalid.move:18:29
   │
18 │         while (true) return (0, false, R{});
   │                             ^^^^^^^^^^^^^^^

error: cannot return `(integer, bool, R)` from a function with result type `(bool, u64, R)`
   ┌─ tests/checking/typing/return_type_explicit_exp_invalid.move:23:30
   │
23 │         while (false) return (0, false, R{});
   │                              ^^^^^^^^^^^^^^^
